--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -1,7 +1,10 @@
 /* ==========================================================================
                 main page STYLES
    ========================================================================== */
-
+.wrapper-main-slider{
+    width: 100%;
+    background: #e3e3e3;
+}
 /* ==========================================================================
                END main page STYLES
 ========================================================================== */
