--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -1,6 +1,28 @@
 /* ==========================================================================
                 main page STYLES
    ========================================================================== */
+.is-slider-swiper-prev{
+    background: none;
+    overflow: hidden;
+
+    &:before{
+        content: '';
+        display: block;
+        box-sizing: border-box;
+    }
+}
+
+.is-slider-swiper-next{
+    background: none;
+    overflow: hidden;
+
+    &:before{
+        content: '';
+        display: block;
+        box-sizing: border-box;
+    }
+}
+
 .wrapper-content{
     width: 1170px;
     margin: 0 auto;
@@ -34,6 +56,8 @@
         @include fontStyle(45,55,0);
         margin-left: 3px;
         color: $cBrown;
+        transition: transform .8s .0s;
+
     }
 
     .second-title{
@@ -42,12 +66,63 @@
         text-transform: uppercase;
         color: #3f3f3f;
         margin-bottom: 34px;
+        transition: transform 1s .0s;
     }
 
     .text{
         @include Average;
         @include fontStyle(15,26,0);
         color: #3f3f3f;
+        transition: transform 1.2s .0s;
+    }
+
+    .is-slider-swiper-prev{
+        width: 16px;
+        height: 27px;
+        left: 30px;
+
+        &:before{
+            width: 19px;
+            height: 19px;
+            transform: rotate(45deg);
+            transform-origin: 38% 100%;
+            border: 3px solid #fff;
+        }
+    }
+
+    .is-slider-swiper-next{
+        width: 16px;
+        height: 27px;
+        right: 30px;
+
+        &:before{
+            width: 19px;
+            height: 19px;
+            transform: rotate(45deg);
+            transform-origin: 0% 0%;
+            border: 3px solid #fff;
+        }
+    }
+
+    .swiper-slide-next{
+        .first-title, .second-title, .text{
+            transform: translateX(300px);
+            opacity: 0.2;
+        }
+    }
+
+    .swiper-slide-prev{
+        .first-title, .second-title, .text{
+            transform: translateX(-300px);
+            opacity: 0.2;
+        }
+    }
+
+    .swiper-slide-active{
+        .first-title, .second-title, .text{
+            transform: translateX(0);
+            opacity: 1;
+        }
     }
 }
 
@@ -71,6 +146,7 @@
     }
 
     .row{
+        display: inline-block;
         margin-bottom: 33px;
     }
 
@@ -401,12 +477,25 @@
         display: inline-block;
         width: 13px;
         height: 13px;
-        background: $cBrown;
         margin-right: 18px;
+        background-image: url('/dist/img/spritesheet.png');
+        background-position: -58px -5px;
 
         &:last-child{
             margin-right: 0;
         }
+    }
+
+    .chefs-social-f{
+        background-position: -58px -5px;
+    }
+
+    .chefs-social-in{
+        background-position: -58px -29px;
+    }
+
+    .chefs-social-p{
+        background-position: -5px -53px;
     }
 
     .chefs-text{
@@ -450,11 +539,17 @@
     }
 }
 
-
 .wrapper-quote-slider{
     height: 440px;
     background: #292929;
     position: relative;
+
+    .container-quote-slider{
+        position: relative;
+        width: 970px;
+        margin: 0 auto;
+        height: 100%;
+    }
 
     .swiper-slide{
         display: flex;
@@ -468,32 +563,229 @@
         text-align: center;
     }
 
+    .inner-slide{
+        margin-top: -19px;
+    }
+
     .icon-quote{
-        margin-bottom: 40px;
+        margin: 0 auto 40px auto;
+        width: 17px;
+        height: 16px;
+        background-image: url('/dist/img/spritesheet.png');
+        background-position: -82px -5px;
     }
 
     .text-quote{
         @include fontStyle(15,25,0);
         @include Average;
         color: #d9d9d9;
-        margin-bottom: 40px;
+        margin-bottom: 38px;
     }
 
     .author-quote{
-        @include fontStyle(16,25,2);
+        @include fontStyle(16,29,2);
         @include Montserrat_Bold;
         color: $cWhite;
         text-transform: uppercase;
     }
 
     .profession-quote{
-        @include fontStyle(15,25,0);
-        @include Montserrat_Regular;
+        @include fontStyle(14,25,0);
+        @include Average;
         color: $cBrown;
         margin-bottom: 20px;
     }
+
+    .is-slider-swiper-prev{
+        width: 7px;
+        height: 12px;
+        left: 30px;
+
+        &:before{
+            width: 9px;
+            height: 9px;
+            transform: rotate(45deg);
+            transform-origin: 44% 88%;
+            border: 2px solid $cBrown;
+        }
+    }
+
+    .is-slider-swiper-next{
+        width: 7px;
+        height: 12px;
+        right: 30px;
+
+        &:before{
+            width: 9px;
+            height: 9px;
+            transform: rotate(45deg);
+            transform-origin: 0% 0%;
+            border: 2px solid $cBrown;
+        }
+    }
+
+    .swiper-pagination-bullet{
+        width: 5px;
+        height: 5px;
+        border: 1px solid #e4bb7a;
+        opacity: 0.55;
+        border-radius: 0;
+        background: none;
+        transition: background .3s 0s, opacity .3s 0s;
+    }
+
+    .swiper-pagination-bullet-active{
+        background: #e4bb7a;
+        opacity: 1;
+    }
 }
 
+.wrapper-reviews{
+    text-align: center;
+    padding-top: 92px;
+    padding-bottom: 90px;
+
+    .title{
+        @include fontStyle(45,49,1);
+    }
+
+    .second-title{
+        text-align: center;
+        @include fontStyle(36,47,3.8);
+        @include Montserrat_Bold;
+        color: $cBlack;
+        text-transform: uppercase;
+        margin-bottom: 32px;
+    }
+
+    .row{
+        margin-bottom: 35px;
+    }
+
+    .text-reviews{
+        max-width: 760px;
+        margin: 0 auto 38px auto;
+        @include fontStyle(15,25,0);
+        @include Average;
+        color: #41403f;
+    }
+
+    .level-reviews{
+        width: 70px;
+        height: 14px;
+        margin: 0 auto 40px auto;
+        font-size: 0;
+        line-height: 0;
+        //background: greenyellow;
+    }
+
+    .reviews-item{
+        display: inline-block;
+        background-image: url('/dist/img/spritesheet.png');
+        width: 14px;
+        height: 14px;
+        background-position: -82px -29px;
+    }
+
+    .reviews-active{
+        background-position: -109px -5px;
+    }
+
+    .name-reviews{
+        @include fontStyle(16,28,2);
+        @include Montserrat_Bold;
+        text-transform: uppercase;
+        color: $cBlack;
+    }
+
+    .rang-reviews{
+        @include fontStyle(15,25,0);
+        @include Average;
+        color: $cBrown;
+    }
+}
+
+.wrapper-subscribe{
+    background: #fbfbfb;
+    text-align: center;
+    padding-top: 95px;
+    padding-bottom: 95px;
+
+    .second-title{
+        @include fontStyle(18,25,2);
+        @include Montserrat_Bold;
+        color: $cBlack;
+        text-transform: uppercase;
+        margin-bottom: 37px;
+    }
+
+    .row{
+        margin-bottom: 44px;
+    }
+
+    .form-subscribe{
+        display: block;
+    }
+
+    .label-subscribe{
+        position: relative;
+        display: inline-block;
+        width: 270px;
+        height: 50px;
+        border: 1px solid #afafaf;
+        margin-right: 23px;
+        padding:0 21px;
+        vertical-align: middle;
+        box-sizing: border-box;
+
+        span{
+            display: block;
+            position: absolute;
+            left: 22px;
+            top: 10px;
+            @include fontStyle(15,26,0);
+            @include Average;
+            color: #41403f;
+            transition: transform .3s 0s, font-size .3s 0s, line-haight .3s 0s;
+        }
+    }
+
+    .input-subscribe{
+        display: block;
+        position: absolute;
+        left: 20px;
+        bottom: 0;
+        width: 280px;
+        height: 30px;
+        border: 0;
+        -webkit-appearance: none;
+        outline: 0;
+        @include fontStyle(15,26,0);
+        @include Average;
+        color: #41403f;
+        z-index: 10;
+        background: rgba(255, 255, 255, 0);
+
+        &:focus {
+            &+ span {
+                transform: translateY(-7px);
+                @include fontStyle(10,20,0);
+            }
+
+        }
+    }
+
+    .btn-default{
+        display: inline-block;
+        border: 0;
+        -webkit-appearance: none;
+        outline: 0;
+        @include fontStyle(16,30,0);
+        padding: 10px 40px;
+        cursor: pointer;
+        vertical-align: middle;
+    }
+}
 
 /* ==========================================================================
                END main page STYLES
